# chat2ide

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  env.example  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.server.json  vite.config.ts
docs/: architecture.md  configuration.md  deploy-cloudflare.md  dev-guide.md  manual-test-plan.md  operations.md  product.md  protocol.md  security.md  troubleshooting.md  user-guide.md
helper/: pyproject.toml
helper/src/helper/: __init__.py  automator.py  calibration.py  clipboard.py  config.py  logger.py  main.py  models.py  server.py  service.py
helper/src/helper/platform/: base.py  linux.py
helper/tests/: test_automator.py  test_calibration.py  test_clipboard.py  test_config.py  test_linux_platform.py  test_main.py  test_models.py  test_service.py
scripts/: bootstrap.sh  bridge-smoke-client.mjs  common.sh  dev.sh  package-extension.sh  preflight.mjs  smoke-e2e.mjs  test.sh
src/server/: config.ts  cookie.d.ts  index.ts
src/shared/: protocol.ts  terminalState.ts
tests/: clientBridgeSessionManager.test.mjs  config.test.mjs  pinAuth.test.mjs  protocol.test.mjs  ringBuffer.test.mjs  terminalSessionManager.test.mjs  terminalSocketHub.test.mjs  terminalState.test.mjs
vscode-extension/: .eslintrc.cjs  LICENSE  README.md  package-lock.json  package.json  start.sh  tsconfig.json  tsconfig.test.json  vitest.config.ts
vscode-extension/scripts/: run-codex-and-bridge.sh  run-codex-cli-bridge.sh
web/: index.html  tsconfig.json
web/src/: App.tsx  main.tsx
(+75 files in other folders)
